--- a/index.html
+++ b/index.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Happy Birthday, Jaans</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday, Jaans</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div id="unlock-screen" class="active">
-  <h2>To continue, answer this:</h2>
-  <p>What is Doraemon's favorite tool?</p>
-  <input id="riddle-input" placeholder="your answer...">
-  <button id="riddle-btn">Unlock</button>
+<!-- Unlock Screen -->
+<div id="unlock-screen" class="centered-screen">
+  <h2 class="title">Answer to Enter</h2>
+  <p class="riddle">What is Doraemon’s favorite tool?</p>
+  <input id="answer-input" placeholder="your answer..." autocomplete="off">
+  <button id="answer-btn">Unlock</button>
 </div>
 
-<div id="main-content">
-  
+<!-- Main Content -->
+<div id="main-container" class="hidden">
+
+  <!-- Shiva Silhouette Background -->
+  <div id="shiva-bg"></div>
+
+  <!-- Fireworks Canvas -->
   <canvas id="fireworks"></canvas>
 
-  <div id="gift-container">
-    <img id="gift-box" src="assets/gift/gift-closed.png">
+  <!-- Floating Petals & Balloons Layer -->
+  <div id="particles-layer"></div>
+
+  <!-- Doraemon Sprites -->
+  <div id="doraemon-layer"></div>
+
+  <!-- Gift Box -->
+  <div id="gift-box-wrapper" class="gift-center">
+    <img id="gift-box" alt="gift">
   </div>
 
-  <div id="letter-popup">
-    <img class="parchment" src="assets/letter/parchment.png">
-    <div class="letter-text">
-      <h2>Happy 24th Birthday, Jaans</h2>
-      <p>May Shiva keep your spirit wild, radiant and free.</p>
-      <p>In a world full of billions, fate decided our paths should cross — only one picture, yet countless memories we cherish.</p>
-      <p>We laugh at Doraemon, we tease, we argue, we grow — and I adore every version of you.</p>
-      <p>You’re fierce like a cadet, soft like a dreamer, and playful like a child chasing butterflies.</p>
-      <p>And oh, what a beautiful thing it is that you exist.</p>
+  <!-- Handwritten Letter Popup -->
+  <div id="letter-popup" class="hidden">
+    <div class="letter-container">
+      <div class="letter-paper">
+        <h2 class="letter-title">Happy 24th Birthday, <span class="accent">Jaans</span></h2>
+        <p class="letter-body">
+          Before anything else — may Shiva keep your spirit wild, radiant and free.<br><br>
+          There are people who simply exist, and then there are people whose existence feels like a small cosmic event. You, unmistakably, are the latter.<br><br>
+          Fierce like a cadet. Soft like a dreamer. Devoted like a seeker. Childlike like a girl who still laughs at Doraemon.<br><br>
+          In a world full of billions, we somehow share a picture — just one — yet countless memories we cherish.<br><br>
+          And oh, what a beautiful thing it is that you exist.
+        </p>
+        <button id="close-letter" class="btn">Close Letter</button>
+      </div>
     </div>
-    <button id="close-letter">Close</button>
   </div>
 
-  <div id="voice-player">
-    <audio id="voice" src="audio/voice.mp3"></audio>
-    <button id="voice-play">Play Voice</button>
+  <!-- Voice Message Player -->
+  <div id="voice-wrapper" class="hidden">
+    <button id="play-voice" class="btn">Play Voice Message</button>
+    <audio id="voice-audio" src="audio/voice.mp3"></audio>
   </div>
 
 </div>
