Update2 index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           Fierce like a cadet. Soft like a dreamer. Devoted like a seeker. Childlike like a girl who still laughs at Doraemon.<br><br>
           In a world full of billions, we somehow share a picture — just one — yet countless memories we cherish.<br><br>
           And oh, what a beautiful thing it is that you exist.
+          <div class="photo-center">
+            <img src="assets/photos/us.jpeg" alt="Us" class="shared-photo">
+          </div>
         </p>
         <button id="close-letter" class="btn">Close Letter</button>
       </div>
