Update5 index.html

--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
   <!-- Doraemon Sprites -->
   <div id="doraemon-layer"></div>
 
-  <!-- Gift Box -->
+ 
+
+  <!-- Gift Box Placeholder -->
   <div id="gift-box-wrapper" class="gift-center">
-    <img id="gift-box" alt="gift">
+    <div id="gift-box" style="width:200px; height:200px; background:red; cursor:pointer; border-radius:12px;"></div>
   </div>
+
 
   <!-- Handwritten Letter Popup -->
   <div id="letter-popup" class="hidden">
