Update6 index.html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
  
 
   <!-- Gift Box Placeholder -->
+ 
+
+  <!-- Gift Box -->
   <div id="gift-box-wrapper" class="gift-center">
-    <div id="gift-box" style="width:200px; height:200px; background:red; cursor:pointer; border-radius:12px;"></div>
+    <img id="gift-box" src="assets/gift.png" alt="gift">
   </div>
+
 
 
   <!-- Handwritten Letter Popup -->
