Update7 index.html

--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
   <!-- Gift Box Placeholder -->
  
 
+ 
+
   <!-- Gift Box -->
   <div id="gift-box-wrapper" class="gift-center">
-    <img id="gift-box" src="assets/gift.png" alt="gift">
+    <img id="gift-box" src="assets/gift.png" alt="gift" style="width:200px; cursor:pointer;">
   </div>
+
 
 
 
