--- a/index.html
+++ b/index.html
@@ -32,20 +32,10 @@
   <!-- Doraemon Sprites -->
   <div id="doraemon-layer"></div>
 
- 
-
-  <!-- Gift Box Placeholder -->
- 
-
- 
-
   <!-- Gift Box -->
   <div id="gift-box-wrapper" class="gift-center">
-    <img id="gift-box" src="assets/gift.png" alt="gift" style="width:200px; cursor:pointer;">
+    <img id="gift-box" src="assets/gift.png" alt="gift">
   </div>
-
-
-
 
   <!-- Handwritten Letter Popup -->
   <div id="letter-popup" class="hidden">
@@ -60,13 +50,11 @@
           And oh, what a beautiful thing it is that you exist.
         </p>
 
-        <!-- Your shared photo -->
-        
-
-        <button id="close-letter" class="btn">Close Letter</button>
         <div class="photo-center">
           <img src="assets/photos/us.jpeg" alt="Us" class="shared-photo">
         </div>
+
+        <button id="close-letter" class="btn">Close Letter</button>
       </div>
     </div>
   </div>
