Update12 index.html

--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
 
 <body>
 
-<!-- Unlock Screen -->
-<div id="unlock-screen" class="centered-screen">
-  <h2 class="title">Answer to Enter</h2>
-  <p class="riddle">What is Doraemon’s favorite tool?</p>
-  <input id="answer-input" placeholder="your answer..." autocomplete="off">
-  <button id="answer-btn">Unlock</button>
-</div>
-
 <!-- Main Content -->
-<div id="main-container" class="hidden">
+<div id="main-container">
 
   <!-- Shiva Silhouette Background -->
   <div id="shiva-bg"></div>
